--- a/src/main/angular/src/app/components/pir-node/pir-node.component.scss
+++ b/src/main/angular/src/app/components/pir-node/pir-node.component.scss
@@ -1,26 +1,10 @@
-.cell {
-  font-family: sans-serif;
-  display: table-cell;
-  vertical-align: top;
+.has-motion {
+  background-color: #fff0ab;
+}
+.no-motion {
+  background-color: #cbfcc7;
 }
 
-.cell h5 {
-  text-align: center;
-  font-weight: normal;
-}
-
-.cell div {
-  text-align: center;
-  font-size: 30px;
-  font-weight: bolder;
-}
-
-.node-display {
-  width: 100%;
-  height: 100px;
-  display: table;
-}
-
-.node-display:first-child {
-  padding-left: 20px;
+.first {
+  background-color: steelblue;
 }
